# md2html

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo-dark.html  demo-light.html  md2html.bat  md2html.py  md2html.spec  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
examples/: demo-dark.html  demo-light.html  demo.html  demo.md
md2html/: __init__.py  __main__.py  cli.py  converter.py  preprocess.py  templates.py
tests/: __init__.py  test_converter.py
