[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2html"
version = "1.0.0"
description = "Enhanced Markdown to HTML converter with Mermaid, syntax highlighting, and math support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "md2html contributors" },
]
keywords = ["markdown", "html", "converter", "mermaid", "syntax-highlighting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
dependencies = [
    "markdown>=3.5",
    "pymdown-extensions>=10.0",
    "pygments>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/neobuilding/md2html"
Repository = "https://github.com/neobuilding/md2html"
Issues = "https://github.com/neobuilding/md2html/issues"

[project.scripts]
md2html = "md2html.cli:main"

[tool.setuptools.packages.find]
include = ["md2html*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
